Fix centrering, och struktur i css fil

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang=en>
-<head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="1440p_home.css">
-<link rel="stylesheet" href="fhd_home.css">
-<link rel="stylesheet" href="hd_home.css">
-<title>Floristgården - Hem</title>
-</head>
-<body>
-
-<h1>Välkommen till Floristgården!</h1>
-
-
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="./style.css">
+        <title>Floristgården - Hem</title>
+    </head>
+    <body>
+        <h1>Välkommen till Floristgården!</h1>
 </body>
 </html>
