Smalll changes to HTML/CSS

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
         <title>Floristgården - Hem</title>
     </head>
     <body>
-        <h1>Välkommen till Floristgården!</h1>
-</body>
+        <h1 class="title">Välkommen till Floristgården!</h1>
+    </body>
 </html>
