--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./style.css">
-        <title>Floristgården - Hem</title>
-    </head>
+        <title>Floristgården - Start</title>
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    </heaaaaad>
     <body>
         <h1 class="title">Välkommen till Floristgården!</h1>
     </body>
