--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="sv">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Floristgården - Hem</title>
     </head>
     <body>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">Välkommen till Floristgården</h1>
+                <h1 class="display-4 serif-font">Välkommen till Floristgården</h1>
                 <p class="lead">
                     <a href="">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-door-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -36,6 +37,22 @@
                         </a>
                 </p>
             </div>
+          </div>
+
+          <div class="container">
+                <div class="row">
+                    <div class="col pb-2">
+                        <h2 class="serif-font">Våra öppettider</h2>
+                        <ul class="list-group w-50">
+                            <li class="list-group-item opening-hour">Måndagar 10-16</li>
+                            <li class="list-group-item opening-hour">Tisdagar 10-16</li>
+                            <li class="list-group-item opening-hour">Onsdagar 10-16</li>
+                            <li class="list-group-item opening-hour">Torsdagar 10-16</li>
+                            <li class="list-group-item opening-hour">Fredagar 10-16</li>
+                            <li class="list-group-item opening-hour">Lördagar 12-15</li>
+                        </ul>
+                    </div>
+                </div>
           </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
