--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,8 @@
             <h2 class="serif-font">Våra produkter</h2>
 
             <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
-                    <div id="4" class="card">
+                <div id="4" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
+                    <div class="card">
                         <img class="card-img-top product-image" src="./images/bild1.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title product-name">Bröllopsbruketter</h5>
@@ -78,8 +78,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
-                    <div id="6" class="card">
+                <div id="6" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
+                    <div class="card">
                         <img class="card-img-top product-image" src="./images/bild1.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title product-name">Höstbukett</h5>
@@ -91,8 +91,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
-                    <div id="3" class="card">
+                <div id="3" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
+                    <div class="card">
                         <img class="card-img-top product-image" src="./images/bild1.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title product-name">Sommarbukett</h5>
@@ -104,8 +104,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
-                    <div id="8" class="card">
+                <div id="8" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
+                    <div class="card">
                         <img class="card-img-top product-image" src="./images/bild1.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title product-name">Rosor 10-pack</h5>
@@ -117,8 +117,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
-                    <div id="9" class="card">
+                <div id="9" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
+                    <div class="card">
                         <img class="card-img-top product-image" src="./images/bild1.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title product-name">Tulpaner 10-pack</h5>
@@ -130,8 +130,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
-                    <div id="10" class="card">
+                <div id="10" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
+                    <div class="card">
                         <img class="card-img-top product-image" src="./images/bild1.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title product-name">Konsultation 30 min</h5>
@@ -143,8 +143,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
-                    <div id="5" class="card">
+                <div id="5" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
+                    <div class="card">
                         <img class="card-img-top product-image" src="./images/bild1.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title product-name">Begravningskrans</h5>
