Center 'Våra produkter'

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 
         <div class="container">
 
-            <h2 class="serif-font">Våra produkter</h2>
+            <h2 class="serif-font text-center">Våra produkter</h2>
 
             <div class="row justify-content-center">
                 <div id="4" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
