Updated personal images

--- a/public/personal.html
+++ b/public/personal.html
@@ -41,15 +41,15 @@
 		<div class="employee-container">
 			<div class="employee-list">
 				<div class="employee">
-					<img src="/images/employees/anna_pettersson.jpg" class="employee-img" alt="Anna Petterson"/>
+					<img src="./images/employees/anna_pettersson.jpg" class="employee-img" alt="Anna Petterson"/>
 					<a class="employee-name">Anna Pettersson</a>
 				</div>
 				<div class="employee">
-					<img src="/images/employees/orjan_johansson.jpg" class="employee-img" alt="Anna Petterson"/>
+					<img src="./images/employees/orjan_johansson.jpg" class="employee-img" alt="Anna Petterson"/>
 					<a class="employee-name">Örjan Johansson</a>
 				</div>
 				<div class="employee">
-					<img src="/images/employees/fredrik_ortqvist.jpg" class="employee-img" alt="Anna Petterson"/>
+					<img src="./images/employees/fredrik_ortqvist.jpg" class="employee-img" alt="Anna Petterson"/>
 					<a class="employee-name">Fredrik Ortqvist</a>
 				</div>
 			</div>
