--- a/public/personal.html
+++ b/public/personal.html
@@ -88,6 +88,7 @@
             </div>
         </div>
 
+        <!-- FOOTER -->
         <footer class="container-fluid footer pt-3">
             <div class="container">
     
