--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
         </div>
 
         <!-- FOOTER -->
-        <footer class="container-fluid footer pt-3">
+        <footer class="container-fluid footer mt-5 pt-3">
             <div class="container">
     
                 <div class="row">
