--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,10 @@
 		</div>
 
         <div class="container">
-            <div class="row">
-                <div class="col pb-2">
-                    <h2 class="serif-font">Våra öppettider</h2>
-                    <ul class="list-group w-50">
+            <h2 class="serif-font text-center">Våra öppettider</h2>
+            <div class="row justify-content-center">
+                <div class="col-2 pb-2">
+                    <ul class="list-group">
                         <li class="list-group-item opening-hour">Måndagar 10-16</li>
                         <li class="list-group-item opening-hour">Tisdagar 10-16</li>
                         <li class="list-group-item opening-hour">Onsdagar 10-16</li>
