--- a/public/personal.html
+++ b/public/personal.html
@@ -149,7 +149,7 @@
     
             </div>
             <div class="made-by-tsm">
-                Made by Travelling Sales Men
+                Made by Travelling Salesmen
             </div>
         </footer>
 
