--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,7 @@
     
             </div>
             <div class="made-by-tsm">
-                Made by Travelling Sales Men
+                Made by Travelling Salesmen
             </div>
         </footer>        
 
