--- a/public/index.html
+++ b/public/index.html
@@ -9,35 +9,22 @@
         <title>Floristgården - Hem</title>
     </head>
     <body>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4 serif-font">Välkommen till Floristgården</h1>
-                <p class="lead">
-                    <a target="_blank" href="https://goo.gl/maps/5PyynxTw8Fy4BG1z5">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-door-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
-                            <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
-                          </svg>
-                        Fjällgatan 32H 981 39 KIRUNA
-                    </a>
-                </p>
-                <p class="lead">
-					<a href="tel:0630-555-555">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z"/>
-						</svg>
-						0630-555-555
-					</a>
-
-					<a href="mailto://info@DOMÄN">
-						<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
-						</svg>
-						info@DOMÄN
-					</a>
-                </p>
-            </div>
-		</div>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		    <a class="navbar-brand" href="#">Floristgården</a>
+		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+			  		<li class="nav-item active">
+						<a class="nav-link" href="./index.html">Hem<span class="sr-only">(current)</span></a>
+			  		</li>
+			  		<li class="nav-item">
+						<a class="nav-link" href="./personal.html">Personal</a>
+			  		</li>
+				</ul>
+		  	</div>
+		</nav>
 		<div class="product-images">
 			<img src="images/bild1.jpg" alt="blomma med flera färger">
 			<img src="images/bild2.jpg" alt="blå blomma typ kanske lila?">
