--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,15 @@
 				</ul>
 		  	</div>
 		</nav>
-		<div class="product-images">
-			<img src="images/bild1.jpg" alt="blomma med flera färger">
-			<img src="images/bild2.jpg" alt="blå blomma typ kanske lila?">
-			<img src="images/bild3.jpg" alt="riktigt cool blomma">
+		<div class="message">
+			<p>Välkommen till floristgården! </p>
+			<p>Löksås ipsum hela år gamla sällan att stora det där ordningens, räv denna tiden är dunge tiden på strand sitt, i det sista sin både det nya samtidigt faktor. Gör dimma sitt vidsträckt redan hela verkligen kunde där omfångsrik, hwila icke helt björnbär rännil dimma icke varit häst, själv det hans dimma groda ta häst det. Nya sin vidsträckt därmed samma ska vidsträckt i ännu, hav kom sax samma som räv. </p>
 		</div>
-
+		<div class="parallax">
+			<div class="parallax-content">
+				<p>Löksås ipsum hela år gamla sällan att stora det där ordningens, räv denna tiden är dunge tiden på strand sitt, i det sista sin både det nya samtidigt faktor. Gör dimma sitt vidsträckt redan hela verkligen kunde där omfångsrik, hwila icke helt björnbär rännil dimma icke varit häst, själv det hans dimma groda ta häst det.</p>
+			</div>
+		</div>
         <div class="container">
 
             <h2 class="serif-font text-center">Våra produkter</h2>
