Add hitta hit to navbar, add navbar to hitta hit

--- a/public/personal.html
+++ b/public/personal.html
@@ -21,10 +21,14 @@
 			  		</li>
 			  		<li class="nav-item active">
 						<a class="nav-link" href="./personal.html">Personal<span class="sr-only">(current)</span></a>
+                    </li>                      
+                    <li class="nav-item active">
+						<a class="nav-link" href="./hitta_hit.html">Hitta hit<span class="sr-only">(current)</span></a>
 			  		</li>
 				</ul>
 		  	</div>
-		</nav>
+        </nav>
+        
         <div class="container pb-4">
             <h2 class="serif-font text-center">Vår personal</h2>
             <div class="row pt-2 justify-content-center">
