--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
 			  		</li>
 			  		<li class="nav-item">
 						<a class="nav-link" href="./personal.html">Personal</a>
+                    </li>
+                    <li class="nav-item active">
+						<a class="nav-link" href="./hitta_hit.html">Hitta hit<span class="sr-only">(current)</span></a>
 			  		</li>
 				</ul>
 		  	</div>
