--- a/public/hitta_hit.html
+++ b/public/hitta_hit.html
@@ -9,7 +9,7 @@
         <title>Floristgården - Hem</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light container">
 		    <a class="navbar-brand" href="#">Floristgården</a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
