Remove ! from index.hmtl welcome msg

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 		  	</div>
 		</nav>
 		<div class="message container">
-			<h1 class="display-4">Välkommen till Floristgården! </h1>
+			<h1 class="display-4">Välkommen till Floristgården</h1>
 			<p>Löksås ipsum hela år gamla sällan att stora det där ordningens, räv denna tiden är dunge tiden på strand sitt, i det sista sin både det nya samtidigt faktor. Gör dimma sitt vidsträckt redan hela verkligen kunde där omfångsrik, hwila icke helt björnbär rännil dimma icke varit häst, själv det hans dimma groda ta häst det. Nya sin vidsträckt därmed samma ska vidsträckt i ännu, hav kom sax samma som räv. </p>
 		</div>
 		<div class="parallax">
