--- a/public/hitta_hit.html
+++ b/public/hitta_hit.html
@@ -19,7 +19,7 @@
 			  		<li class="nav-item">
 						<a class="nav-link" href="./index.html">Hem</a>
 			  		</li>
-			  		<li class="nav-item active">
+			  		<li class="nav-item">
 						<a class="nav-link" href="./personal.html">Personal<span class="sr-only">(current)</span></a>
                     </li>                      
                     <li class="nav-item active">
