--- a/public/personal.html
+++ b/public/personal.html
@@ -22,7 +22,7 @@
 			  		<li class="nav-item active">
 						<a class="nav-link" href="./personal.html">Personal<span class="sr-only">(current)</span></a>
                     </li>                      
-                    <li class="nav-item active">
+                    <li class="nav-item">
 						<a class="nav-link" href="./hitta_hit.html">Hitta hit<span class="sr-only">(current)</span></a>
 			  		</li>
 				</ul>
