--- a/public/hitta_hit.html
+++ b/public/hitta_hit.html
@@ -20,10 +20,10 @@
 						<a class="nav-link" href="./index.html">Hem</a>
 			  		</li>
 			  		<li class="nav-item">
-						<a class="nav-link" href="./personal.html">Personal<span class="sr-only">(current)</span></a>
-                    </li>                      
+						<a class="nav-link" href="./personal.html">Personal</a>
+                    </li>
                     <li class="nav-item active">
-						<a class="nav-link" href="./hitta_hit.html">Hitta hit<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="./hitta_hit.html">Hitta hit</a>
 			  		</li>
 				</ul>
 		  	</div>
