--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 			  		<li class="nav-item active">
-						<a class="nav-link" href="./index.html">Hem<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="./index.html">Hem</a>
 			  		</li>
 			  		<li class="nav-item">
 						<a class="nav-link" href="./personal.html">Personal</a>
                     </li>
                     <li class="nav-item">
-						<a class="nav-link" href="./hitta_hit.html">Hitta hit<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="./hitta_hit.html">Hitta hit</a>
 			  		</li>
 				</ul>
 		  	</div>
