--- a/public/hitta_hit.html
+++ b/public/hitta_hit.html
@@ -9,24 +9,26 @@
         <title>Floristgården - Hem</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light container">
-		    <a class="navbar-brand" href="#">Floristgården</a>
-		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-			  		<li class="nav-item">
-						<a class="nav-link" href="./index.html">Hem</a>
-			  		</li>
-			  		<li class="nav-item">
-						<a class="nav-link" href="./personal.html">Personal</a>
-                    </li>
-                    <li class="nav-item active">
-						<a class="nav-link" href="./hitta_hit.html">Hitta hit</a>
-			  		</li>
-				</ul>
-		  	</div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">Floristgården</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="./index.html">Hem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./personal.html">Personal</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="./hitta_hit.html">Hitta hit</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     
         <div class="container">
