--- a/public/personal.html
+++ b/public/personal.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </nav>
-        
+
         <div class="container pb-4">
             <h2 class="serif-font text-center">Vår personal</h2>
             <div class="row pt-2 justify-content-center">
@@ -40,6 +40,7 @@
                         <img src="./images/employees/anna_pettersson.jpg" class="card-img-top employee-img" alt="Anna Petterson">
                         <div class="card-body">
                             <h5 class="card-title employee-name">Anna Pettersson</h5>
+                            <h6 class="card-subtitle mb-2 text-muted employee-role">Horticulturist</h6>
                         </div>
                     </div>
                 </div>
@@ -49,6 +50,7 @@
                         <img src="./images/employees/fredrik_ortqvist.jpg" class="card-img-top employee-img" alt="Fredrik Ortqvist">
                         <div class="card-body">
                             <h5 class="card-title employee-name">Fredrik Ortqvist</h5>
+                            <h6 class="card-subtitle mb-2 text-muted employee-role">Owner</h6>
                         </div>
                     </div>
                 </div>
@@ -58,6 +60,7 @@
                         <img src="./images/employees/orjan_johansson.jpg" class="card-img-top employee-img" alt="Örjan Johansson">
                         <div class="card-body">
                             <h5 class="card-title employee-name">Örjan Johansson</h5>
+                            <h6 class="card-subtitle mb-2 text-muted employee-role">Florist</h6>
                         </div>
                     </div>
                 </div>
