--- a/public/personal.html
+++ b/public/personal.html
@@ -40,6 +40,7 @@
                         <img src="./images/employees/anna_pettersson.jpg" class="card-img-top employee-img" alt="Anna Petterson">
                         <div class="card-body">
                             <h5 class="card-title employee-name">Anna Pettersson</h5>
+                            <h6 class="card-subtitle mb-2 text-muted employee-role">Horticulturist</h6>
                         </div>
                     </div>
                 </div>
