--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
+		<link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
         <title>Floristgården - Hem</title>
     </head>
     <body>
@@ -30,14 +33,14 @@
                 </div>
             </div>
 		</nav>
+		<div class="parallax">
+			<div class="parallax-content container">
+				<p>Välkommen till Floristgården!</p>
+			</div>
+		</div>
 		<div class="message container">
 			<h1 class="display-4">Välkommen till Floristgården</h1>
 			<p>Löksås ipsum hela år gamla sällan att stora det där ordningens, räv denna tiden är dunge tiden på strand sitt, i det sista sin både det nya samtidigt faktor. Gör dimma sitt vidsträckt redan hela verkligen kunde där omfångsrik, hwila icke helt björnbär rännil dimma icke varit häst, själv det hans dimma groda ta häst det. Nya sin vidsträckt därmed samma ska vidsträckt i ännu, hav kom sax samma som räv. </p>
-		</div>
-		<div class="parallax">
-			<div class="parallax-content container">
-				<p>Löksås ipsum hela år gamla sällan att stora det där ordningens, räv denna tiden är dunge tiden på strand sitt, i det sista sin både det nya samtidigt faktor. Gör dimma sitt vidsträckt redan hela verkligen kunde där omfångsrik, hwila icke helt björnbär rännil dimma icke varit häst, själv det hans dimma groda ta häst det.</p>
-			</div>
 		</div>
         <div class="container">
 
