--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
-        <link rel='shortcut icon' type='image/x-icon' href='images/Floristgården Logo.png' />
+        <link rel='shortcut icon' type='image/x-icon' href='images/Floristgården_Logo.png'/>
         <title>Floristgården - Hem</title>
     </head>
     <body>
