--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
+        <script src="https://kit.fontawesome.com/3252b3e180.js" crossorigin="anonymous"></script>
         <title>Floristgården - Hem</title>
     </head>
     <body>
@@ -215,6 +216,28 @@
                         </ul>
                     </div>
     
+                </div>
+
+                <<div class="row justify-content-center">
+
+                    <div class="col-md-1 col-2 list-group-flush">
+                        <a href="https://sv-se.facebook.com/ntiuppsala/">
+                            <i class="fab fa-facebook-square fa-3x"></i>
+                        </a>
+                    </div>
+
+                    <div class="col-md-1 col-2 list-group-flush">
+                        <a href="https://twitter.com/ntiuppsala">
+                            <i class="fab fa-twitter-square fa-3x"></i>
+                        </a>
+                    </div>
+
+                    <div class="col-md-1 col-2 list-group-flush">
+                        <a href="https://www.instagram.com/ntiuppsala/?hl=sv">
+                            <i class="fab fa-instagram-square fa-3x"></i>
+                        </a>
+                    </div>
+
                 </div>
     
             </div>
