--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,13 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
-
         <title>Floristgården - Hem</title>
     </head>
     <body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="./index.html">
-					<img src="./images/Floristgården Logo.png"/>
+					<img src="./images/floristgarden_logo.png" alt="Floristgården Logo"/>
 				</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
