--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,11 @@
 		</nav>
 		<div class="parallax">
 			<div class="parallax-content container display-4">
-			<p>Välkommen till Floristgården!</p>
+			    <p>Välkommen till Floristgården!</p>
 			</div>
 		</div>
 		<div class="message container">
-			<h1 class="display-4">Vilka är vi?</h1>
+			<h2 class="serif-font text-center">Vilka är vi?</h2>
 			<p>Löksås ipsum hela år gamla sällan att stora det där ordningens, räv denna tiden är dunge tiden på strand sitt, i det sista sin både det nya samtidigt faktor. Gör dimma sitt vidsträckt redan hela verkligen kunde där omfångsrik, hwila icke helt björnbär rännil dimma icke varit häst, själv det hans groda ta häst det. Nya sin vidsträckt därmed samma ska vidsträckt i ännu, hav kom sax samma räv.</p>
 		</div>
         <div class="container">
