--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="UTF-8">
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
 		<link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
@@ -38,7 +38,7 @@
 		</nav>
 		<div class="parallax">
 			<div class="parallax-content container display-4">
-			    <p>Välkommen till Floristgården!</p>
+			    <p class="serif-font">Välkommen till Floristgården!</p>
 			</div>
 		</div>
 		<div class="message container">
