Added why choose us

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,19 @@
 			<h2 class="serif-font text-center">Vilka är vi?</h2>
 			<p>Löksås ipsum hela år gamla sällan att stora det där ordningens, räv denna tiden är dunge tiden på strand sitt, i det sista sin både det nya samtidigt faktor. Gör dimma sitt vidsträckt redan hela verkligen kunde där omfångsrik, hwila icke helt björnbär rännil dimma icke varit häst, själv det hans groda ta häst det. Nya sin vidsträckt därmed samma ska vidsträckt i ännu, hav kom sax samma räv.</p>
 		</div>
+		<div class="message-why message">
+			<div class="container">
+				<h2 class="serif-font text-center">Varför välja oss?</h2>
+				<div class="row">
+					<div class="col-sm why-item">
+						<h3 class="why-header">Lokalt</h3>Löksås ipsum jäst enligt att omfångsrik tiden av ingalunda det erfarenheter gamla, rännil tid räv och vid tiden det varit annat har. Redan samma olika mjuka inom groda kom år jäst tid, tre och bra annan och strand vemod söka häst där, det icke faktor plats faktor inom år träutensilierna. Nu hela det själv vad om sin från av helt varit annan enligt, har dunge nya själv sjö kom redan vid smultron erfarenheter. </div>
+					<div class="col-sm why-item">
+						<h3 class="why-header">Coolt</h3>Löksås ipsum jäst enligt att omfångsrik tiden av ingalunda det erfarenheter gamla, rännil tid räv och vid tiden det varit annat har. Redan samma olika mjuka inom groda kom år jäst tid, tre och bra annan och strand vemod söka häst där, det icke faktor plats faktor inom år träutensilierna. Nu hela det själv vad om sin från av helt varit annan enligt, har dunge nya själv sjö kom redan vid smultron erfarenheter. </div>
+					<div class="col-sm why-item">
+						<h3 class="why-header">Billigt</h3>Löksås ipsum jäst enligt att omfångsrik tiden av ingalunda det erfarenheter gamla, rännil tid räv och vid tiden det varit annat har. Redan samma olika mjuka inom groda kom år jäst tid, tre och bra annan och strand vemod söka häst där, det icke faktor plats faktor inom år träutensilierna. Nu hela det själv vad om sin från av helt varit annan enligt, har dunge nya själv sjö kom redan vid smultron erfarenheter. </div>
+				</div>
+			</div>
+		</div>
         <div class="container">
 
             <h2 class="serif-font text-center">Våra produkter</h2>
