Added some spacing to index

--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,11 @@
 			</div>
 		</div>
 		<div class="message container">
-			<h2 class="serif-font text-center">Vilka är vi?</h2>
+			<h2 class="serif-font text-center mt-5">Vilka är vi?</h2>
 			<p>Löksås ipsum hela år gamla sällan att stora det där ordningens, räv denna tiden är dunge tiden på strand sitt, i det sista sin både det nya samtidigt faktor. Gör dimma sitt vidsträckt redan hela verkligen kunde där omfångsrik, hwila icke helt björnbär rännil dimma icke varit häst, själv det hans groda ta häst det. Nya sin vidsträckt därmed samma ska vidsträckt i ännu, hav kom sax samma räv.</p>
 		</div>
-		<div class="message-why message">
-			<div class="container">
+		<div class="message-why message mt-5">
+			<div class="container pb-5 pt-5">
 				<h2 class="serif-font text-center">Varför välja oss?</h2>
 				<div class="row">
 					<div class="col-sm why-item">
@@ -60,7 +60,7 @@
 		</div>
         <div class="container">
 
-            <h2 class="serif-font text-center">Våra produkter</h2>
+            <h2 class="serif-font text-center mt-5">Våra produkter</h2>
 
             <div class="row justify-content-center">
                 <div id="4" class="col-lg-3 col-md-4 col-sm-6 col-12 product pt-4">
