--- a/public/personal.html
+++ b/public/personal.html
@@ -10,12 +10,14 @@
 		<link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
         <script src="https://kit.fontawesome.com/3252b3e180.js" crossorigin="anonymous"></script>
-        <title>Floristgården - Hem</title>
+        <title>Floristgården - Personal</title>
     </head>
     <body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="./index.html">Floristgården</a>
+                <a class="navbar-brand" href="./index.html">
+					<img src="./images/floristgarden_logo.png" alt="Floristgården Logo"/>
+				</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
