--- a/public/personal.html
+++ b/public/personal.html
@@ -37,8 +37,8 @@
             </div>
         </nav>
 
-        <div class="container pb-4">
-            <h2 class="serif-font text-center">Vår personal</h2>
+        <div class="container pb-4 mt-5">
+            <h2 class="serif-font">Vår personal</h2>
             <div class="row pt-2 justify-content-center">
 
                 <div class="col-8 col-md-6 col-lg-4 mb-3">
