Fix test and add style to closed days

--- a/public/hitta_hit.html
+++ b/public/hitta_hit.html
@@ -50,6 +50,14 @@
 			<h1>Stängda dagar</h1>
 			<ul id="closed-days">
 			</ul>
+			<div class="row">
+				<div class="col-md-6">
+					<table class="table table-striped">
+						<tbody id="closed-days-tbody">
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
 
         <!-- FOOTER -->
