--- a/public/index.html
+++ b/public/index.html
@@ -163,14 +163,14 @@
 
                 <div class="row">
 
-                    <div class="col-md-6">
+                    <div class="col-md-6 mt-3">
                         <h4>Floristgården</h4>
                         <p class="pr-2">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugi.
                         </p>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 mt-3">
                         <h4>Våra öppetider</h4>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item opening-hour">Måndagar 10-16</li>
@@ -182,7 +182,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 mt-3">
                         <h4>Info</h4>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
