Update so closed days work without js, and change font of title on closed days

--- a/public/hitta_hit.html
+++ b/public/hitta_hit.html
@@ -44,16 +44,49 @@
                 981 39 KIRUNA
             </a>
             <div id="map">
+                <noscript>You need to have javascript enabled to use this map.</noscript>
             </div>
         </div>
 		<div class="container mt-5">
-			<h1>Stängda dagar</h1>
+			<h2 class="serif-font">Stängda dagar</h2>
 			<ul id="closed-days">
 			</ul>
 			<div class="row">
 				<div class="col-md-6">
 					<table class="table table-striped">
 						<tbody id="closed-days-tbody">
+                            <tr class="closed-day">
+                                <td>Sveriges nationaldag</td>
+                                <td> 6 juni</td>
+                            </tr>
+                            <tr class="closed-day">
+                                <td>Julafton</td>
+                                <td> 24 december</td>
+                            </tr>
+                            <tr class="closed-day">
+                                <td>Juldagen</td>
+                                <td> 25 december</td>
+                            </tr>
+                            <tr class="closed-day">
+                                <td>Annandag jul</td>
+                                <td> 26 december</td>
+                            </tr>
+                            <tr class="closed-day">
+                                <td>Nyårsafton</td>
+                                <td> 31 december</td>
+                            </tr>
+                            <tr class="closed-day">
+                                <td>Nyårsdagen</td>
+                                <td> 1 januari</td>
+                            </tr>
+                            <tr class="closed-day">
+                                <td>Trettondedag jul</td>
+                                <td> 6 januari</td>
+                            </tr>
+                            <tr class="closed-day">
+                                <td>Första maj</td>
+                                <td> 1 maj</td>
+                            </tr>
 						</tbody>
 					</table>
 				</div>
