Fix title on hitta_hit

--- a/public/hitta_hit.html
+++ b/public/hitta_hit.html
@@ -10,7 +10,7 @@
 		<link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
         <script src="https://kit.fontawesome.com/3252b3e180.js" crossorigin="anonymous"></script>
-        <title>Floristgården - Hem</title>
+        <title>Floristgården - Hitta hit</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
