--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -19,6 +19,38 @@ title: Hitta Hit
         <div class="col-md-6">
             <table class="table table-striped">
                 <tbody id="closed-days-tbody">
+                    <tr class="closed-day">
+                        <td>Julafton</td>
+                        <td> 24 december</td>
+                    </tr>
+                    <tr class="closed-day">
+                        <td>Juldagen</td>
+                        <td> 25 december</td>
+                    </tr>
+                    <tr class="closed-day">
+                        <td>Annandag jul</td>
+                        <td> 26 december</td>
+                    </tr>
+                    <tr class="closed-day">
+                        <td>Nyårsafton</td>
+                        <td> 31 december</td>
+                    </tr>
+                    <tr class="closed-day">
+                        <td>Nyårsdagen</td>
+                        <td> 1 januari</td>
+                    </tr>
+                    <tr class="closed-day">
+                        <td>Trettondedag jul</td>
+                        <td> 6 januari</td>
+                    </tr>
+                    <tr class="closed-day">
+                        <td>Första maj</td>
+                        <td> 1 maj</td>
+                    </tr>
+                    <tr class="closed-day">
+                        <td>Sveriges nationaldag</td>
+                        <td> 6 juni</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
