--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -8,7 +8,7 @@ title: Hitta Hit
         Fjällgatan 32H<br />
         981 39 KIRUNA
     </a>
-    <div id="map">
+    <div id="map" class="onlyjs">
     </div>
 </div>
 <div class="container mt-5">
