Change font on stängda dagar title

--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -12,7 +12,7 @@ title: Hitta Hit
     </div>
 </div>
 <div class="container mt-5">
-    <h1>Stängda dagar</h1>
+    <h2 class="serif-font">Stängda dagar</h2>
     <ul id="closed-days">
     </ul>
     <div class="row">
