--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -4,12 +4,13 @@ title: Hitta Hit
 ---
 <div class="container mt-5">
     <h2 class="serif-font">Hitta hit</h2>
+    <div class="address">
     <a target="_blank" href="https://goo.gl/maps/5PyynxTw8Fy4BG1z5">
         Fjällgatan 32H<br />
         981 39 KIRUNA
     </a>
-    <div id="map" class="onlyjs">
-    </div>
+     </div>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1503.2561139964444!2d20.231765716861002!3d67.86605788541029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNjfCsDUxJzU3LjgiTiAyMMKwMTQnMDIuMiJF!5e0!3m2!1ssv!2sse!4v1600074009390!5m2!1ssv!2sse" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 <div class="container mt-5">
     <h2 class="serif-font">Stängda dagar</h2>
@@ -57,19 +58,3 @@ title: Hitta Hit
     </div>
 </div>
 
-<script>
-    // Initialize and add the map
-    function initMap() {
-        // The location of Uluru
-        var uluru = {lat: 67.8660579, lng: 20.2339544};
-        // The map, centered at Uluru
-        var map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 4, center: uluru});
-        // The marker, positioned at Uluru
-        var marker = new google.maps.Marker({position: uluru, map: map});
-    }
-</script>
-<script defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0GvMpFH6TlLbuOvVUQ9pohLnGF1y4V5E&callback=initMap">
-    // Get your own API key at: https://developers.google.com/maps/documentation/javascript/adding-a-google-map#step_3_get_an_api_key
-</script>
