Add time simulating test

--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -57,6 +57,7 @@ title: Hitta Hit
     </div>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sinon.js/2.3.4/sinon.min.js "></script>
 <script>
     // Initialize and add the map
     function initMap() {
