Opening hours section

--- a/site/index.html
+++ b/site/index.html
@@ -8,14 +8,14 @@ title: Hem
     </div>
 </div>
 
-<div class="container">
+<div class="container onlyjs">
     <h2 class="serif-font text-center mt-5">Vart skickar vi blommor?</h2>
     <div
         class="blommogram"
         data-container="body"
         data-toggle="popover"
         data-placement="bottom"
-        data-content="Hmmm...."
+        data-content=""
     >
         <input
             onkeypress="event.keyCode === 13 ? checkZipcode() : null"
