--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -13,11 +13,25 @@ title: Hitta Hit
     <iframe id="map" class="onlyjs" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1503.2561139964444!2d20.231765716861002!3d67.86605788541029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNjfCsDUxJzU3LjgiTiAyMMKwMTQnMDIuMiJF!5e0!3m2!1ssv!2sse!4v1600074009390!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 <div class="container mt-5">
-    <h2 class="serif-font">Stängda dagar</h2>
-    <ul id="closed-days">
-    </ul>
+
     <div class="row">
+
         <div class="col-md-6">
+            <h2 class="serif-font">Våra öppettider</h2>
+            <table class="table table-striped">
+                <tbody>
+                    {% for day in site.data.open_days %}
+                    <tr>
+                        <td>{{ day.name }}</td>
+                        <td>{{ day.time }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-md-6">
+            <h2 class="serif-font">Stängda dagar</h2>
             <table class="table table-striped">
                 <tbody id="closed-days-tbody">
                     {% for day in site.data.closed_days %}
@@ -29,6 +43,7 @@ title: Hitta Hit
                 </tbody>
             </table>
         </div>
+
     </div>
 </div>
 
