--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -17,7 +17,7 @@ title: Hitta Hit
     <div class="row">
 
         <div class="col-md-6">
-            <h2 class="serif-font">Våra öppettider</h2>
+            <h2 id="opening-hours" class="serif-font">Våra öppettider</h2>
             <table class="table table-striped">
                 <tbody>
                     {% for day in site.data.open_days %}
