added personal messages

--- a/site/personal.html
+++ b/site/personal.html
@@ -5,6 +5,7 @@ title: Personal
 
 <div class="container pb-4 mt-5">
     <h2 class="serif-font">Vår personal</h2>
+    <p class="employee_welcome">Välkommen till oss på Floristgården! Vi är ett sammansvetsat gäng med olika expertkompetenser som därmed kan hjälpa dig på bästa sätt utifrån dina behov.</p>
     <div class="row pt-2 justify-content-center">
         {% for person in site.data.personal %}
         <div class="col-8 col-md-6 col-lg-4 mb-3">
@@ -13,6 +14,7 @@ title: Personal
                 <div class="card-body">
                     <h5 class="card-title employee-name">{{ person.name }}</h5>
                     <h6 class="card-subtitle mb-2 text-muted employee-role">{{ person.role }}</h6>
+                    <p class="card-subtitle text-muted employee-msg">{{ person.msg }}</p>
                 </div>
             </div>
         </div>
