--- a/site/index.html
+++ b/site/index.html
@@ -9,8 +9,12 @@ title: Hem
         <a id="opening-hours-btn" href="./hitta_hit.html#opening-hours" class="btn btn-outline-info">Våra öppettider</a>
     </div>
 </div>
-
 <div class="container onlyjs">
+    <h2 class="text-center blomTitle">Vill du ha blommor hemskickade till någon du håller nära. Det fixar vi!</h2>
+    <p class="serif-font text-center blomInfo text-muted mt-2">Befinner du dig i Kiruna? Då kan vi skicka blommor hem till dig!<br>
+        Ring 0630-555-555 för att beställa och betala sedan med faktura.<br>
+        Osäker om vi levererar till ditt område? Testa genom att skriv in postnummer nedan.<br>
+        Övriga frågor: Ring 0630-555-555
     <h2 class="serif-font text-center mt-5">Vart skickar vi blommor?</h2>
     <div
         class="blommogram"
