--- a/site/hitta_hit.html
+++ b/site/hitta_hit.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hitta Hit
+title: Hitta hit
 ---
 <div class="container mt-5">
     <h2 class="serif-font">Hitta hit</h2>
