centered text on mobile

--- a/site/personal.html
+++ b/site/personal.html
@@ -4,8 +4,11 @@ title: Personal
 ---
 
 <div class="container pb-4 mt-5">
-    <h2 class="serif-font">Vår personal</h2>
-    <p class="employee_welcome">Välkommen till oss på Floristgården! Vi är ett sammansvetsat gäng med olika expertkompetenser som därmed kan hjälpa dig på bästa sätt utifrån dina behov.</p>
+    <div class="mobile-center">    
+        <h2 class="serif-font">Vår personal</h2>
+        <p class="employee_welcome">Välkommen till oss på Floristgården! Vi är ett sammansvetsat gäng med olika expertkompetenser som kan hjälpa dig på bästa sätt utifrån dina behov.</p>
+    </div>
+
     <div class="row pt-2 justify-content-center">
         {% for person in site.data.personal %}
         <div class="col-8 col-md-6 col-lg-4 mb-3">
